--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "jsx": "react",
     "jsxFactory": "React.createElement",
     "jsxFragmentFactory": "React.Fragment",
+    "noImplicitAny": false,
     "baseUrl": "./src",
     "paths": {
       "@/*": [
